# openpose_ros

./: CMakeLists.txt  README.md
src/: openpose_ros_node.cpp
